--- a/static/css/main.css
+++ b/static/css/main.css
@@ -28,7 +28,7 @@
     /* background: url('https://cdd-ddc.org/static/img/index_bg_line.svg') no-repeat -200px -130px / cover; */
     /* background: url('https://cdd-ddc.org/static/img/index_bg_line.svg') no-repeat center -12vh / cover; */
     /* background: url('https://cdd-ddc.org/static/img/index_bg_space.svg') repeat; */
-    background: url('https://cdd-ddc.org/static/img/index_bg_line.svg') no-repeat -4vw -3vh / 100% auto;
+    background: url('https://cdd-ddc.org/static/img/index_bg_line.svg') no-repeat -5vw -3vh / 100% auto;
 }
 
 .lang_select {
@@ -645,7 +645,7 @@
     }
     #index_bg_line {
         max-height: 80vh;
-        background: url('https://cdd-ddc.org/static/img/index_bg_line.svg') no-repeat -330px -210px / auto 820px;
+        /* background: url('https://cdd-ddc.org/static/img/index_bg_line.svg') no-repeat -330px -210px / auto 820px; */
     }
     .lang_select {
         top: 10px;
