--- a/static/css/main.css
+++ b/static/css/main.css
@@ -13,7 +13,8 @@
 #index_body {
     cursor: pointer;
     max-width: 600px;
-    height: 80vh;
+    /* height: 80vh; */
+    height: 800px;
     max-height: 800px;
     width: 100%;
     margin: 100px auto;
