--- a/static/css/main.css
+++ b/static/css/main.css
@@ -30,7 +30,8 @@
     /* background: url('https://cdd-ddc.org/static/img/index_bg_line.svg') no-repeat center -12vh / cover; */
     /* background: url('https://cdd-ddc.org/static/img/index_bg_space.svg') repeat; */
     /* background: url('https://cdd-ddc.org/static/img/index_bg_line.svg') no-repeat -5vw -3vh / 100% auto; */
-    background: url('https://cdd-ddc.org/static/img/index_bg_line.svg') no-repeat -12vw -12vh / 820px auto;
+    /* background: url('https://cdd-ddc.org/static/img/index_bg_line.svg') no-repeat -12vw -12vh / 820px auto; */
+    background: url('https://cdd-ddc.org/static/img/index_bg_line.svg') no-repeat -200px -130px / 820px auto;
 }
 
 .lang_select {
@@ -648,7 +649,8 @@
     #index_bg_line {
         max-height: 80vh;
         /* background: url('https://cdd-ddc.org/static/img/index_bg_line.svg') no-repeat center center / auto 820px; */
-        background: url('https://cdd-ddc.org/static/img/index_bg_line.svg') no-repeat -50vh -60vw / 820px auto;
+        /* background: url('https://cdd-ddc.org/static/img/index_bg_line.svg') no-repeat -50vh -60vw / 820px auto; */
+        background: url('https://cdd-ddc.org/static/img/index_bg_line.svg') no-repeat -200px -130px / 820px auto;
         
     }
     .lang_select {
