--- a/static/css/main.css
+++ b/static/css/main.css
@@ -669,7 +669,7 @@
         margin: 0 25%;
     }
     .header_logo_letter {
-        display: inline;
+        display: inline-block !important;
         position: relative;
     }
     .header_logo_letter .en {
@@ -697,17 +697,17 @@
     }
 
     .cheon {
-        display: inline !important;
+        
         position: relative;
         background: url('https://cdd-ddc.org/static/img/index_bg_cheon.svg') no-repeat center center / 30px auto;
     }
     .du {
-        display: inline !important;
+        
         position: relative;
         background: url('https://cdd-ddc.org/static/img/index_bg_du.svg') no-repeat center center / 30px auto;
     }
     .dong {
-        display: inline !important;
+        
         position: relative;
         background: url('https://cdd-ddc.org/static/img/index_bg_dong.svg') no-repeat center center / 30px auto;
     }
