--- a/static/css/main.css
+++ b/static/css/main.css
@@ -691,13 +691,15 @@
         right: -30%;
     } */
     .header_logo_letter.left {
-        right: 100%;
+        /* right: 100%; */
+        left: 47.5%;
     }
     .header_logo_letter.right {
         right: 0;
     }
     .header_logo_letter.right_mobile {
-        right: 25%;
+        /* right: 25%; */
+        right: 47.5%;
     }
 
     .cheon {
