--- a/static/css/main.css
+++ b/static/css/main.css
@@ -692,8 +692,8 @@
     } */
     .header_logo_letter.left {
         /* right: 100%; */
-        right: 0;
-        left: 47.5%;
+        /* left: 47.5%; */
+        right: -47.5%;
     }
     .header_logo_letter.center {
         right: 0;
