--- a/static/css/main.css
+++ b/static/css/main.css
@@ -690,6 +690,16 @@
     .header_logo_letter.right .en {
         right: -30%;
     } */
+
+    .header_logo_letter.left {
+        right: 0;
+    }
+    .header_logo_letter.center {
+        right: 0;
+    }
+    .header_logo_letter.right {
+        right: 0;
+    }
     .header_logo_letter.left {
         /* right: 100%; */
         /* left: 47.5%; */
@@ -699,7 +709,6 @@
         right: 0;
     }
     .header_logo_letter.right {
-        left: 0;
         right: 47.5%;
     }
     .header_logo_letter.right_mobile {
