--- a/static/css/main.css
+++ b/static/css/main.css
@@ -667,14 +667,15 @@
         left: 0;
         width: 50%;
         margin: 0 25%;
+        position: fixed;
     }
     .header_logo_letter {
         display: inline-block !important;
-        position: relative;
+        position: fixed;
     }
     .header_logo_letter>div {
         display: inline-block !important;
-        position: relative;
+        /* position: relative; */
     }
     .header_logo_letter .en {
         font-size: 1.8rem;
@@ -704,12 +705,14 @@
         /* right: 100%; */
         /* left: 47.5%; */
         /* right: -30%; */
+        right: calc(70% - 15px);
     }
     .header_logo_letter.center {
-        right: 0;
+        right: calc(50% - 15px);
     }
     .header_logo_letter.right {
         /* right: 30%; */
+        right: calc(30% - 15px);
     }
     .header_logo_letter.right_mobile {
         /* right: 25%; */
