--- a/static/css/main.css
+++ b/static/css/main.css
@@ -661,6 +661,23 @@
         top: -20px;
         left: 145px;
     }
+
+    .cheon {
+        
+        /* position: relative; */
+        background: url('https://cdd-ddc.org/static/img/index_bg_cheon.svg') no-repeat center center / 30px auto;
+    }
+    .du {
+        
+        /* position: relative; */
+        background: url('https://cdd-ddc.org/static/img/index_bg_du.svg') no-repeat center center / 30px auto;
+    }
+    .dong {
+        
+        /* position: relative; */
+        background: url('https://cdd-ddc.org/static/img/index_bg_dong.svg') no-repeat center center / 30px auto;
+    }
+    
     .header_logo {
         /* left: 30%;
         width: 40%; */
@@ -682,58 +699,21 @@
         /* position: absolute; */
         top: 8px;
     }
-    /* .header_logo_letter.center {
-        right: 45%;
-    } */
-    /* .header_logo_letter.center .en {
-        right: -30%;
-    }
-    .header_logo_letter.right .en {
-        right: -30%;
-    } */
-
     .header_logo_letter.left {
-        right: 0;
-    }
-    .header_logo_letter.center {
-        right: 0;
-    }
-    .header_logo_letter.right {
-        right: 0;
-    }
-    .header_logo_letter.left {
-        /* right: 100%; */
-        /* left: 47.5%; */
-        /* right: -30%; */
         right: calc(70% - 15px);
     }
     .header_logo_letter.center {
         right: calc(50% - 15px);
     }
     .header_logo_letter.right {
-        /* right: 30%; */
         right: calc(30% - 15px);
     }
+
     .header_logo_letter.right_mobile {
-        /* right: 25%; */
         right: 47.5%;
     }
 
-    .cheon {
-        
-        position: relative;
-        background: url('https://cdd-ddc.org/static/img/index_bg_cheon.svg') no-repeat center center / 30px auto;
-    }
-    .du {
-        
-        position: relative;
-        background: url('https://cdd-ddc.org/static/img/index_bg_du.svg') no-repeat center center / 30px auto;
-    }
-    .dong {
-        
-        position: relative;
-        background: url('https://cdd-ddc.org/static/img/index_bg_dong.svg') no-repeat center center / 30px auto;
-    }
+    
 }
 
 @media all and (max-width: 481px) {}
