--- a/static/css/main.css
+++ b/static/css/main.css
@@ -99,6 +99,9 @@
 .front_msg_letter.center {
     right: 50%;
 }
+.header_logo_letter.center .en {
+    left: 2.5rem;
+}
 
 .header_logo_letter.right,
 .front_msg_letter.right {
