--- a/static/css/header.css
+++ b/static/css/header.css
@@ -263,7 +263,8 @@ header {
 #menu_wrap #menu_box #menu_list .menu_list_item>a>h2 {
     /* font-size: 2.3rem; */
     font-size: 2rem;
-    color: rgba(0, 0, 0, 0.5);
+    /* color: rgba(0, 0, 0, 0.5); */
+    color: rgb(230,30,40);
 }
 
 
