--- a/static/css/header.css
+++ b/static/css/header.css
@@ -335,7 +335,14 @@ header {
 }
 
 #place_list_wrap #place_list #place_ul .place_title:hover {
-    color: rgba(160, 30, 50, 0.6);
+    /* color: rgba(160, 30, 50, 0.6); */
+    color: rgb(230,30,40);
     font-weight: 900;
     text-decoration: underline;
+}
+
+@media all and (max-width: 481px) {
+    #menu_wrap #menu_box {
+        padding: 15px 5%;
+    }
 }
