--- a/static/css/header.css
+++ b/static/css/header.css
@@ -100,7 +100,8 @@ header {
     width: 60px;
     margin: auto 0;
     top: 0;
-    left: 85%;
+    /* left: 85%; */
+    right: 3%;
     position: absolute;
     filter: opacity(0.7);
 }
