--- a/static/css/header.css
+++ b/static/css/header.css
@@ -164,6 +164,9 @@ header {
     /* font-size: 1.5rem; */
     font-size: 1rem;
 }
+#header_wrap .header_lang:hover {
+    color: rgba(230,30,40, 0.5);
+}
 
 
 /****menu****/
