--- a/static/css/header.css
+++ b/static/css/header.css
@@ -164,7 +164,7 @@ header {
     /* font-size: 1.5rem; */
     font-size: 1rem;
 }
-#header_wrap .header_lang:hover {
+#header_wrap .header_lang .header_lang_btn:hover {
     color: rgba(230,30,40, 0.5) !important;
 }
 
