detail cont font

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -348,6 +348,9 @@
     font-size: 1.2rem;
     padding: 0 15px 40px;
 }
+#detail_wrap #detail_box #detail_cont p {
+    font-family: "경기천년바탕" !important;
+}
 
 .detail_attachment_title {
     text-align: center;
