--- a/static/css/main.css
+++ b/static/css/main.css
@@ -94,19 +94,23 @@
 }
 .header_logo_letter.left,
 .front_msg_letter.left {
-    right: 100%;
+    /* right: 100%; */
+    right: calc(100% + 20px);
 }
 .header_logo_letter.center,
 .front_msg_letter.center {
-    right: 50%;
+    /* right: 50%; */
+    right: calc(50% + 20px);
 }
 .header_logo_letter.center .en {
-    left: 2.5rem;
+    /* left: 2.5rem; */
+    left: calc(2.5rem + 20px);
 }
 
 .header_logo_letter.right,
 .front_msg_letter.right {
-    right: 0;
+    /* right: 0; */
+    right: 20px;
 }
 .header_logo_letter .en {
     color: rgb(230,30,40);
