--- a/static/css/main.css
+++ b/static/css/main.css
@@ -80,7 +80,7 @@
 
 .header_logo {
     position: absolute;
-    left: 42.5%;
+    /* left: 42.5%; */
     top: 15px;
     width: 20%;
     height: 40px;
