--- a/static/css/header.css
+++ b/static/css/header.css
@@ -160,6 +160,7 @@ header {
     cursor: pointer;
     position: absolute;
     top: 0;
+    left: 3%;
     color: rgba(0, 0, 0, 0.5);
     /* font-size: 1.5rem; */
     font-size: 1rem;
