--- a/static/css/main.css
+++ b/static/css/main.css
@@ -80,15 +80,22 @@
 }
 
 .header_logo {
-    position: absolute;
+    /* position: absolute; */
+    position: fixed;
     /* left: 42.5%; */
+    left: 0;
     top: 15px;
-    width: 20%;
+    /* width: 20%; */
+    width: 50%;
+    margin: 0 25%;
     height: 40px;
     cursor: pointer;
 }
 .header_logo_letter {
-    position: absolute;
+    /* position: absolute; */
+    display: inline-block !important;
+    position: fixed;
+
     height: 40px;
     width: 40px;
     transition: all 3000ms ease;
@@ -96,12 +103,14 @@
 .header_logo_letter.left,
 .front_msg_letter.left {
     /* right: 100%; */
-    right: calc(100% + 20px);
+    /* right: calc(100% + 20px); */
+    right: 70%;
 }
 .header_logo_letter.center,
 .front_msg_letter.center {
     /* right: 50%; */
-    right: calc(50% + 20px);
+    /* right: calc(50% + 20px); */
+    right: 50%;
 }
 .header_logo_letter.center .en {
     left: 2.5rem;
@@ -110,7 +119,8 @@
 .header_logo_letter.right,
 .front_msg_letter.right {
     /* right: 0; */
-    right: 20px;
+    /* right: 20px; */
+    right: 30%;
 }
 .header_logo_letter .en {
     color: rgb(230,30,40);
