login btn position

--- a/static/css/admin_style.css
+++ b/static/css/admin_style.css
@@ -5,6 +5,7 @@
     width: 100%;
     max-width: 200px;
     padding-left: 5px;
+    left: 3%;
 }
 
 #header_wrap #header_box #header_box_area #header_ad_title {
