--- a/static/css/admin_style.css
+++ b/static/css/admin_style.css
@@ -46,7 +46,8 @@
 #menu_wrap #menu_box #menu_list .menu_list_item .menu_btn_wrap>div>a>h2,
 #menu_wrap #menu_box #menu_list .menu_list_item .menu_btn_wrap>div.menu_add>a {
     font-size: 2.3rem;
-    color: rgba(0, 0, 0, 0.5);
+    /* color: rgba(0, 0, 0, 0.5); */
+    color: rgba(230,30,40, 0.5);
 }
 
 #menu_intro_btn,
