--- a/static/css/admin_style.css
+++ b/static/css/admin_style.css
@@ -47,6 +47,7 @@
 #menu_wrap #menu_box #menu_list .menu_list_item .menu_btn_wrap>div.menu_add>a {
     /* font-size: 2.3rem; */
     /* color: rgba(0, 0, 0, 0.5); */
+    font-weight: 100;
     color: rgba(230,30,40);
 }
 
