--- a/static/css/main.css
+++ b/static/css/main.css
@@ -534,7 +534,7 @@
     float: left;
     margin-left: 10px;
     cursor: pointer;
-    background: url('https://cdd-ddc.org/static/img/index_bg_cheon.svg') no-repeat center center / cover;
+    background: url('https://cdd-ddc.org/static/img/back_btn.svg') no-repeat center center / cover;
 }
 #detail_func_wrap .share_btn {
     width: 50px;
@@ -543,7 +543,7 @@
     float: right;
     margin-right: 10px;
     cursor: pointer;
-    background: url('https://cdd-ddc.org/static/img/index_bg_cheon.svg') no-repeat center center / cover;
+    background: url('https://cdd-ddc.org/static/img/share_btn.svg') no-repeat center center / cover;
 }
 #detail_func_wrap .back_btn img {
     width: 70px;
