--- a/static/css/main.css
+++ b/static/css/main.css
@@ -600,14 +600,15 @@
 }
 
 .mapboxgl-ctrl-group:not(:empty) {
-    -moz-box-shadow: 0;
-    -webkit-box-shadow: 0;
-    box-shadow: 0;
+    -moz-box-shadow: 0 !important;
+    -webkit-box-shadow: 0 !important;
+    box-shadow: 0 !important;
     border-radius: 0;
     border: 1px solid rgb(230,30,40);
     background: url('https://cdd-ddc.org/static/img/index_bg_space_900.png') repeat;
 
 }
+
 .mapboxgl-ctrl button.mapboxgl-ctrl-zoom-in .mapboxgl-ctrl-icon {
     /* background-image: url(data:image/svg+xml;charset=utf-8,%3Csvg width='29' height='29' viewBox='0 0 29 29' xmlns='http://www.w3.org/2000/svg' fill='%23333'%3E%3Cpath d='M14.5 8.5c-.75 0-1.5.75-1.5 1.5v3h-3c-.75 0-1.5.75-1.5 1.5S9.25 16 10 16h3v3c0 .75.75 1.5 1.5 1.5S16 19.75 16 19v-3h3c.75 0 1.5-.75 1.5-1.5S19.75 13 19 13h-3v-3c0-.75-.75-1.5-1.5-1.5z'/%3E%3C/svg%3E); */
     background: url('https://cdd-ddc.org/static/img/zoom_in.svg') no-repeat 6px 2px / 20px auto;
