--- a/static/css/main.css
+++ b/static/css/main.css
@@ -600,9 +600,9 @@
 }
 
 .mapboxgl-ctrl-group:not(:empty) {
-    -moz-box-shadow: 0 !important;
-    -webkit-box-shadow: 0 !important;
-    box-shadow: 0 !important;
+    -moz-box-shadow: none !important;
+    -webkit-box-shadow: none !important;
+    box-shadow: none !important;
     border-radius: 0;
     border: 1px solid rgb(230,30,40);
     background: url('https://cdd-ddc.org/static/img/index_bg_space_900.png') repeat;
