--- a/static/css/main.css
+++ b/static/css/main.css
@@ -611,13 +611,13 @@
 
 .mapboxgl-ctrl button.mapboxgl-ctrl-zoom-in .mapboxgl-ctrl-icon {
     /* background-image: url(data:image/svg+xml;charset=utf-8,%3Csvg width='29' height='29' viewBox='0 0 29 29' xmlns='http://www.w3.org/2000/svg' fill='%23333'%3E%3Cpath d='M14.5 8.5c-.75 0-1.5.75-1.5 1.5v3h-3c-.75 0-1.5.75-1.5 1.5S9.25 16 10 16h3v3c0 .75.75 1.5 1.5 1.5S16 19.75 16 19v-3h3c.75 0 1.5-.75 1.5-1.5S19.75 13 19 13h-3v-3c0-.75-.75-1.5-1.5-1.5z'/%3E%3C/svg%3E); */
-    background: url('https://cdd-ddc.org/static/img/zoom_in.svg') no-repeat 6px 2px / 20px auto;
+    background: url('https://cdd-ddc.org/static/img/zoom_in.svg') no-repeat center center / 18px auto;
 }
 .mapboxgl-ctrl button.mapboxgl-ctrl-zoom-out .mapboxgl-ctrl-icon {
-    background: url('https://cdd-ddc.org/static/img/zoom_out.svg') no-repeat 8px -5px / 30px auto;
+    background: url('https://cdd-ddc.org/static/img/zoom_out.svg') no-repeat center center / 18px auto;
 }
 .mapboxgl-ctrl button.mapboxgl-ctrl-compass .mapboxgl-ctrl-icon {
-    background: url('https://cdd-ddc.org/static/img/compass.svg') no-repeat 5px 3px / 20px auto;
+    background: url('https://cdd-ddc.org/static/img/compass.svg') no-repeat center center / 21px auto;
 }
 
 #map .mapboxgl-popup {
