--- a/static/css/admin_style.css
+++ b/static/css/admin_style.css
@@ -230,7 +230,8 @@ section #userList_wrap .user_table {
 #attached_func_wrap .delete_btn,
 #attached_func_wrap .top_btn,
 #attached_func_wrap .modify_btn {
-    width: 60px;
+    width: 40px;
+    height: 40px;
     margin: 0 auto;
 }
 
