admin detail ctrl

--- a/static/css/admin_style.css
+++ b/static/css/admin_style.css
@@ -235,6 +235,11 @@ section #userList_wrap .user_table {
     margin: 0 auto;
 }
 
+#admin_detail_func_wrap .back_btn {
+    cursor: pointer;
+    background: url("../img/back_btn.png") no-repeat center center / cover;
+}
+#admin_detail_func_wrap .delete_btn,
 #attached_func_wrap .delete_btn {
     cursor: pointer;
     background: url("../img/delete_btn.png") no-repeat center center / cover;
@@ -245,6 +250,7 @@ section #userList_wrap .user_table {
     background: url("../img/top_btn.png") no-repeat center center / cover;
 }
 
+#admin_detail_func_wrap .modify_btn,
 #attached_func_wrap .modify_btn {
     cursor: pointer;
     background: url("../img/modify_btn.png") no-repeat center center / cover;
