--- a/static/css/header.css
+++ b/static/css/header.css
@@ -207,6 +207,7 @@ header {
 
 #menu_wrap {
     width: 100%;
+    min-height: 100%;
     /* height: 100%; */
     /* height: 0px; */
     /* min-height: calc(100vh - 70px); */
