menu box min height

--- a/static/css/header.css
+++ b/static/css/header.css
@@ -242,7 +242,8 @@ header {
 #menu_wrap #menu_box {
     width: 100%;
     /* max-width: 768px; */
-    min-height: calc(100vh - 100px);
+    /* min-height: calc(100vh - 100px); */
+    min-height: 100vh;
     margin: 0 auto;
     /* position: relative; */
     /* top: 140px; */
