--- a/static/css/header.css
+++ b/static/css/header.css
@@ -21,7 +21,8 @@ header {
     /* background-color: rgb(240, 240, 240); */
     /* background-color: rgba(200, 0, 20, 0.03); */
     /* background-color: rgb(255, 245, 245); */
-    background: url('https://cdd-ddc.org/static/img/index_bg_space_900.png') repeat;
+    /* background: url('https://cdd-ddc.org/static/img/index_bg_space_900.png') repeat; */
+    background: transparent;
     display: flex;
     width: 100%;
     height: 70px;
@@ -47,7 +48,8 @@ header {
     border-image-slice: 30; */
 
     /* border-bottom: 2px solid rgba(160, 30, 50, 0.5); */
-    box-shadow: 0 4px 8px 0 rgba(160, 30, 50, 0.2);
+
+    /* box-shadow: 0 4px 8px 0 rgba(160, 30, 50, 0.2); */
 }
 
 
@@ -101,7 +103,8 @@ header {
     margin: auto 0;
     top: 0;
     /* left: 85%; */
-    right: 3%;
+    /* right: 3%; */
+    left: 3%;
     position: absolute;
     filter: opacity(0.7);
 }
@@ -160,7 +163,8 @@ header {
     cursor: pointer;
     position: absolute;
     top: 0;
-    left: 3%;
+    /* left: 3%; */
+    right: 3%;
     color: rgba(0, 0, 0, 0.5);
     /* font-size: 1.5rem; */
     font-size: 1rem;
