--- a/static/css/main.css
+++ b/static/css/main.css
@@ -49,6 +49,7 @@
 .lang_btn_label {
     color: rgb(230, 130, 140);
     font-weight: 100;
+    font-size: 0.9rem;
     cursor: pointer;
 }
 .lang_btn_label.selected {
@@ -64,7 +65,8 @@
     height: 40px;
     cursor: pointer; */
     position: relative;
-    top: 50px;
+    /* top: 50px; */
+    top: 160px;
     left: 120px;
     width: 320px;
     height: 40px;
@@ -653,7 +655,8 @@
 #map .mapboxgl-popup-content h3 {
     font-family: '제주명조', '경기천년바탕', 'Noto Serif SC', 'Noto Serif TC' !important;
     /* font-size: 1.8rem; */
-    font-size: 1.5rem;
+    /* font-size: 1.5rem; */
+    font-size: 1.2rem;
     font-weight: 600;
     opacity: 0.7;
     line-height: 1.7rem;
@@ -663,7 +666,8 @@
 #map .mapboxgl-popup-content h4 {
     font-family: '제주명조', '경기천년바탕', 'Noto Serif SC', 'Noto Serif TC' !important;
     /* font-size: 1.4rem; */
-    font-size: 1.2rem;
+    /* font-size: 1.2rem; */
+    font-size: 1.1rem;
     padding-top: 5px;
     letter-spacing: 0.1rem;
     font-weight: 100;
@@ -678,7 +682,8 @@
     padding-top: 10px;
     font-family: "경기천년바탕";
     /* font-family: "Yeon Sung"; */
-    font-size: 1rem;
+    /* font-size: 1rem; */
+    font-size: 0.9rem;
     line-height: 1.3rem;
     opacity: 0.9;
 }
