--- a/static/css/main.css
+++ b/static/css/main.css
@@ -512,6 +512,9 @@
     margin: 10px;
     font-size: 0.9rem;
 }
+.attached_ref_link span {
+    padding-left: 10px;
+}
 
 #detail_func_wrap {
     /* display: grid;
