--- a/static/css/main.css
+++ b/static/css/main.css
@@ -555,7 +555,7 @@
     width: 50px;
     height: 30px;
     /* position: relative; */
-    position: absolute;
+    position: fixed;
     bottom: 50px;
     float: left;
     margin-left: 40px;
