--- a/static/css/main.css
+++ b/static/css/main.css
@@ -511,6 +511,7 @@
     /* margin: 0 10px; */
     margin: 10px;
     font-size: 0.9rem;
+    font-family: "Yeon Sung";
 }
 .attached_ref_link span {
     padding-left: 10px;
