--- a/static/css/main.css
+++ b/static/css/main.css
@@ -561,7 +561,7 @@
     float: left;
     margin-left: 40px;
     cursor: pointer;
-    background: url('https://cdd-ddc.org/static/img/back_btn.svg') no-repeat center center / 45px auto;
+    background: url('https://cdd-ddc.org/static/img/back_btn_sun_1.png') no-repeat center center / 45px auto;
 }
 #detail_func_wrap .share_btn {
     width: 35px;
@@ -572,7 +572,7 @@
     right: 20px;
     margin-right: 25px;
     cursor: pointer;
-    background: url(https://cdd-ddc.org/static/img/share_btn.svg) no-repeat center center / cover;
+    background: url('https://cdd-ddc.org/static/img/share_btn.svg') no-repeat center center / cover;
 }
 #detail_func_wrap .back_btn img {
     width: 70px;
