--- a/static/css/main.css
+++ b/static/css/main.css
@@ -277,7 +277,7 @@
 
 #detail_wrap #detail_box #detail_title h3 {
     font-size: 1.6rem;
-    font-weight: 100;
+    font-weight: 900;
 }
 
 #detail_wrap #detail_box #detail_sub_title {
@@ -287,7 +287,7 @@
 }
 
 #detail_wrap #detail_box #detail_sub_title h4 {
-    font-size: 1.4rem;
+    font-size: 1rem;
     letter-spacing: 0.1rem;
 }
 
@@ -519,6 +519,9 @@
 }
 .attached_ref_link span {
     padding-left: 10px;
+}
+.attached_ref_link span:hover {
+    border-bottom: 1px solid #777;
 }
 
 #detail_func_wrap {
