--- a/static/css/main.css
+++ b/static/css/main.css
@@ -518,7 +518,7 @@
     font-family: "Yeon Sung";
 }
 .attached_ref_link span {
-    padding-left: 10px;
+    margin-left: 10px;
 }
 .attached_ref_link span:hover {
     border-bottom: 1px solid #777;
