--- a/static/css/main.css
+++ b/static/css/main.css
@@ -774,7 +774,7 @@
         margin-left: 5px;
     }
     #detail_func_wrap .share_btn {
-        margin-left: 10px;
+        margin: 0;
     }
 }
 
