--- a/static/css/admin_style.css
+++ b/static/css/admin_style.css
@@ -5,7 +5,8 @@
     width: 100%;
     max-width: 200px;
     padding-left: 5px;
-    left: 3%;
+    /* left: 3%; */
+    left: 75px;
 }
 
 /* #header_wrap #header_box #header_box_area #header_ad_title {
