--- a/static/css/admin_style.css
+++ b/static/css/admin_style.css
@@ -1,7 +1,8 @@
 /****header****/
 
 #header_wrap #header_box #header_box_area #header_login {
-    position: absolute;
+    /* position: absolute; */
+    position: fixed;
     width: 100%;
     max-width: 200px;
     padding-left: 5px;
