--- a/static/css/header.css
+++ b/static/css/header.css
@@ -7,7 +7,8 @@ header {
 
 #header_wrap {
     width: 100%;
-    height: 80px;
+    /* height: 80px; */
+    height: 0;
     /* display: none; */
     z-index: 100;
     position: fixed;
