--- a/static/css/header.css
+++ b/static/css/header.css
@@ -2,7 +2,8 @@
 
 
 header {
- height: 80px;   
+ /* height: 80px;    */
+ height: 0;   
 }
 
 #header_wrap {
@@ -26,7 +27,8 @@ header {
     background: transparent;
     display: flex;
     width: 100%;
-    height: 70px;
+    /* height: 70px; */
+    height: 0;
     justify-content: space-between;
     align-items: center;
     margin: 0 auto;
@@ -70,7 +72,8 @@ header {
 #header_wrap #header_box #header_box_area {
     width: 100%;
     max-width: 768px;
-    height: 80px;
+    /* height: 80px; */
+    height: 0;
     margin: 0 auto;
     padding-top: 15px;
     z-index: 100;
