--- a/static/css/admin_style.css
+++ b/static/css/admin_style.css
@@ -7,7 +7,8 @@
     max-width: 200px;
     padding-left: 5px;
     /* left: 3%; */
-    left: 100px;
+    left: calc(40px + 3%);
+    top: 15px;
 }
 
 /* #header_wrap #header_box #header_box_area #header_ad_title {
